# deep_learning-api

./: .gitignore
apache-airflow-dev-server/: .env  docker-compose.yaml
apache-airflow-dev-server/dags/: api_client.py  dl_dag.py
deep_learning_apis/deep_learning_backend/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
deep_learning_apis/deep_learning_backend/deep_learning_backend/: app.py  database_session.py  models.py  schemas.py  security.py  settings.py
deep_learning_apis/deep_learning_backend/deep_learning_backend/routers/: auth.py  deep_learning_tasks.py  prediction.py  users.py
deep_learning_apis/deep_learning_backend/tests/: conftest.py  factories.py  test_auth.py  test_deep_learning_tasks.py  test_users.py
deep_learning_apis/docker_containers/compose/: .env  docker-compose.yaml
deep_learning_apis/docker_containers/init-scripts/: init.sql
models_api/docker_containers/compose/: .env  docker-compose.yaml
models_api/models_backend/: pyproject.toml
models_api/models_backend/models_backend/: app.py  schemas.py  settings.py  utils.py
models_api/models_backend/models_backend/routers/: prediction.py  training.py
